--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular-strap": "2.2.4",
     "bootstrap": "3.3.5",
     "angular-oauth2": "^4.1.1",
-    "angular-http-auth": "^1.5.0"
+    "angular-http-auth": "^1.5.0",
+    "angularUtils-pagination": "angular-utils-pagination#^0.11.1"
   }
 }
