--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "bootstrap": "3.3.5",
     "angular-oauth2": "^4.1.1",
     "angular-http-auth": "^1.5.0",
-    "angularUtils-pagination": "angular-utils-pagination#^0.11.1"
+    "angularUtils-pagination": "angular-utils-pagination#^0.11.1",
+    "admin-lte": "^2.4.2"
   }
 }
