--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "gulp": "^3.8.8"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.0.0",
-    "rimraf": "2.4.0",
-    "gulp-livereload": "^3.8.0",
-    "laravel-elixir": "^4.0.0"
+    "bower": "^1.8.2",
+    "gulp-livereload": "^3.8.1",
+    "laravel-elixir": "^6.0.0-17",
+    "meiomask": "^1.1.5"
   }
 }
